# RAG_Techniques_WITH_OPENAI

./: 17_rag_techniques_output.json  README.md  evaluate_across_all_rag_techniques.py  generate_rag_report.py  helper_function_openai.py  helper_functions.py  microsoft_rag_techniques_output.json  own_rag_techniques_output.json  pyproject.toml
Explainbility/: explainable_retrieval_rag.py
Iterative_Techniques/: adaptive_retrieval_rag.py  feedback_loop_rag.py
Querys/: HyDE_RAG.py  HyDe_Hypothetical_Document_Embedding.ipynb  HyPE_Hypothetical_prompt_embedding.ipynb  HyPE_RAG.py  query_transform.py  query_transformations.ipynb
RAG_CSV/: simple_rag_csv_openai.ipynb  simple_rag_with_csv.ipynb
advanced_retrieval/: dartboard_rag.py  fusion_retrieval.ipynb  fusion_retrieval.py  hierarchy_indices.ipynb  hierarchy_indices.py  multimodal_rag.py  reranking_rag.ipynb  reranking_rag.py
blogs/: 01_simple_rag.md  02_proposition_chunking.md  03_rse.md  04_context_chunk_header.md  05_context_enrichment_window.md  06_semantic_chunking.md  07_contextual_compression.md  08_document_augmentation.md  09_fusion_retrieval.md  10_reranking.md  11_hierarchy_indices.md  12_hyde_rag.md  13_hype_rag.md  14_crag.md  15_self_rag.md  16_adaptive_retrieval.md  17_feedback_loop_rag.md  18_reliable_rag.md  19_explainable_retrieval.md  20_query_transformations.md  21_dartboard_rag.md  22_multimodal_rag.md  23_raptor_rag.md  24_graph_rag.md  25_intelligent_rag.md
context_enrichment/: CE_window.ipynb  context_chunk_header.ipynb  context_chunk_header.py  context_enrichment_window.py  (+8 more)
data/: q_a.json  (+6 more)
(+196 files in other folders)
